# effektio

./: Cargo.toml  search_index.en.js  sitemap.xml
.github/workflows/: integration_testing.yml
api/main/app/: __404error.html  index.html  index.json
api/main/app/file-___home_runner_work_effektio_effektio_app_lib_blocs_login_form_submission_status/: file-___home_runner_work_effektio_effektio_app_lib_blocs_login_form_submission_status-library.html
api/main/app/file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_bloc/: file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_bloc-library.html
api/main/app/file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_event/: file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_event-library.html
api/main/app/file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_state/: file-___home_runner_work_effektio_effektio_app_lib_blocs_login_signIn_state-library.html
api/main/dart-sdk/: index.json
api/main/rust/effektio/api/: fn.login_new_client.html  (+1 more)
docs/: index.html
docs/contributing/: index.html
docs/contributing/code-of-conduct/: index.html
docs/contributing/how-to-contribute/: index.html
docs/contributing/license/: index.html
docs/dev/api-docs/: index.html
docs/dev/localisations/: index.html
docs/dev/style-guide/: index.html
docs/getting-started/setup/: index.html
docs/getting-started/troubleshooting/: index.html
native/effektio/: Cargo.toml  api.rsh
native/effektio/src/: api.rs
native/effektio/src/api/: client.rs  room.rs
(+51 files in other folders)
